custom jvm properties to support more request